# Odyssey-Mesh

./: .gitignore  app.py  pyproject.toml  readme.md
odyssey/: cli.py  init.py
odyssey/core/: event_log.py  evidence_record.py  evidence_types.py  features.py  geometry.py  init.py  mesh.py  mesh_store.py  node.py  supervisor.py  transport.py  utils.py
odyssey/sim/: init.py  orchestrator.py
tests/: init.py  test_evidence_integrity.py  test_replay.py  test_supervisor_smoke.py
